--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ title: tom's blog # the main title
 tagline: my thoughts about things # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  a website that logs the various thoughts and projects tom is interested in.
 
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
